# restapi/operations/r_b_a_c/get_user_r_b_a_c_responses.go
@@ -1,0 +1,146 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package r_b_a_c
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/ez-deploy/ezdeploy/models"
+)
+
+// GetUserRBACOKCode is the HTTP code returned for type GetUserRBACOK
+const GetUserRBACOKCode int = 200
+
+/*GetUserRBACOK List All Users RBAC Success, return user RBAC info.
+
+swagger:response getUserRBACOK
+*/
+type GetUserRBACOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.UserRole `json:"body,omitempty"`
+}
+
+// NewGetUserRBACOK creates GetUserRBACOK with default headers values
+func NewGetUserRBACOK() *GetUserRBACOK {
+
+	return &GetUserRBACOK{}
+}
+
+// WithPayload adds the payload to the get user r b a c o k response
+func (o *GetUserRBACOK) WithPayload(payload *models.UserRole) *GetUserRBACOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get user r b a c o k response
+func (o *GetUserRBACOK) SetPayload(payload *models.UserRole) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetUserRBACOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetUserRBACNotFoundCode is the HTTP code returned for type GetUserRBACNotFound
+const GetUserRBACNotFoundCode int = 404
+
+/*GetUserRBACNotFound Get User RBAC Failed, cause user not exist
+
+swagger:response getUserRBACNotFound
+*/
+type GetUserRBACNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetUserRBACNotFound creates GetUserRBACNotFound with default headers values
+func NewGetUserRBACNotFound() *GetUserRBACNotFound {
+
+	return &GetUserRBACNotFound{}
+}
+
+// WithPayload adds the payload to the get user r b a c not found response
+func (o *GetUserRBACNotFound) WithPayload(payload *models.Error) *GetUserRBACNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get user r b a c not found response
+func (o *GetUserRBACNotFound) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetUserRBACNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetUserRBACInternalServerErrorCode is the HTTP code returned for type GetUserRBACInternalServerError
+const GetUserRBACInternalServerErrorCode int = 500
+
+/*GetUserRBACInternalServerError Server Error
+
+swagger:response getUserRBACInternalServerError
+*/
+type GetUserRBACInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetUserRBACInternalServerError creates GetUserRBACInternalServerError with default headers values
+func NewGetUserRBACInternalServerError() *GetUserRBACInternalServerError {
+
+	return &GetUserRBACInternalServerError{}
+}
+
+// WithPayload adds the payload to the get user r b a c internal server error response
+func (o *GetUserRBACInternalServerError) WithPayload(payload *models.Error) *GetUserRBACInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get user r b a c internal server error response
+func (o *GetUserRBACInternalServerError) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetUserRBACInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
