# swagger.yaml
@@ -126,19 +126,76 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/Error'
-  /project/list:
+  /project/get:
     get:
       tags:
         - Project
-      operationId: ListProject
-      description: List All Projects
+      operationId: GetProject
+      description: Get Project
+      parameters:
+      - name: id
+        type: integer
+        in: query
+        required: true
       responses:
         "200":
           description: List All Projects Success, return project info. (project name, project id, project description)
           schema:
-            type: array
-            items:
-              $ref: '#/definitions/ProjectInfo'
+            $ref: '#/definitions/ProjectInfo'
+        "404":
+          description: Get Project Failed, cause project not exist
+          schema:
+            $ref: '#/definitions/Error'
+        "500":
+          description: Server Error
+          schema:
+            $ref: '#/definitions/Error'
+  /rbac/project/get:
+    get:
+      tags:
+        - RBAC
+      operationId: GetProjectRBAC
+      description: Get Project RBAC
+      parameters:
+      - name: id
+        type: integer
+        description: projectID
+        in: query
+        required: true
+      responses:
+        "200":
+          description: List All Projects RBAC Success, return project RBAC info.
+          schema:
+            $ref: '#/definitions/ProjectRole'
+        "404":
+          description: Get Project RBAC Failed, cause project not exist
+          schema:
+            $ref: '#/definitions/Error'
+        "500":
+          description: Server Error
+          schema:
+            $ref: '#/definitions/Error'
+  /rbac/user/get:
+    get:
+      tags:
+        - RBAC
+      operationId: GetUserRBAC
+      description: Get User RBAC
+      parameters:
+      - name: id
+        type: integer
+        description: userID
+        in: query
+        required: true
+      responses:
+        "200":
+          description: List All Users RBAC Success, return user RBAC info.
+          schema:
+            $ref: '#/definitions/UserRole'
+        "404":
+          description: Get User RBAC Failed, cause user not exist
+          schema:
+            $ref: '#/definitions/Error'
         "500":
           description: Server Error
           schema:
@@ -322,7 +379,7 @@ definitions:
         description: environment variable value
         type: string
         example: foobar
-  AuthorityRole:
+  RoleInfo:
     type: object
     description: Authority Role Object
     properties:
@@ -334,14 +391,26 @@ definitions:
         description: project id
         type: integer
         example: 1
-      user_id:
-        description: user id
-        type: integer
-        example: 1
       role:
         description: role
         type: string
         example: admin
+  RoleMember:
+    type: object
+    description: Authority Role Member Object
+    properties:
+      id:
+        description: id
+        type: integer
+        example: 1
+      role_id:
+        description: role id
+        type: integer
+        example: 1
+      user_id:
+        description: user id
+        type: integer
+        example: 1
   RolePermission:
     type: object
     description: Role Permissions Object
@@ -362,6 +431,48 @@ definitions:
         - write
         - delete
         - deploy
+  RoleView:
+    type: object
+    description: Authority Role View Object
+    properties:
+      info:
+        $ref: '#/definitions/RoleInfo'
+      permissions:
+        description: permissions
+        type: array
+        items:
+          $ref: '#/definitions/RolePermission'
+      members:
+        description: members
+        type: array
+        items:
+          $ref: '#/definitions/RoleMember'
+  ProjectRole:
+    type: object
+    description: Project Role Object
+    properties:
+      project_id:
+        description: project_id
+        type: integer
+        example: 1
+      roles:
+        description: roles
+        type: array
+        items:
+          $ref: '#/definitions/RoleView'
+  UserRole:
+    type: object
+    description: User Role Object
+    properties:
+      user_id:
+        description: user_id
+        type: integer
+        example: 1
+      roles:
+        description: roles
+        type: array
+        items:
+          $ref: '#/definitions/RoleView'
   AuthInfo:
     type: object
     properties:
